--- a/consumer-test/testCases/scs/cap.yml
+++ b/consumer-test/testCases/scs/cap.yml
@@ -1,7 +1,7 @@
 # Test case configuration
 referenceAppRepo:
   url: "https://github.com/piper-validation/mta-sample-app.git"
-  branch: "piper-test-cap"
+  branch: "updateCfSpace"
 deployCredentialEnv:
   username: "CX_INFRA_IT_CF_USERNAME"
   password: "CX_INFRA_IT_CF_PASSWORD"
