--- a/resources/metadata/mavenBuild.yaml
+++ b/resources/metadata/mavenBuild.yaml
@@ -111,6 +111,14 @@ spec:
         default: false
         aliases:
           - name: maven/publish
+      - name: customTlsCertificateLinks
+        type: "[]string"
+        description: "List of download links to custom TLS certificates.
+          This is required to ensure trusted connections to instances with repositories (like nexus) when publish flag is set to true."
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
   containers:
     - name: mvn
       image: maven:3.6-jdk-8
