--- a/resources/metadata/mavenBuild.yaml
+++ b/resources/metadata/mavenBuild.yaml
@@ -56,6 +56,9 @@ spec:
           - PARAMETERS
         aliases:
           - name: maven/mavenGlobalSettingsFile
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: custom/mavenGlobalSettingsFile
       - name: m2Path
         type: string
         description: Path to the location of the local repository that should be used.
